--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Multi-Step Form</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
