--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
             <button class="btn btn-secondary mt-3" id="prev2">Back</button>
             <button class="btn btn-success mt-3">Submit</button>
         </div>
+        <div id="step3" class="hidden">
+            <h4>Pricing Details</h4>
+            <div class="scroll-box">
+                <p>Basic Plan - $10/month</p>
+                <p>Standard Plan - $20/month</p>
+                <p>Premium Plan - $30/month</p>
+                <p>Enterprise Plan - $50/month</p>
+                <p>Extra Features Included...</p>
+                <p>More details...</p>
+                <p>Additional pricing options...</p>
+            </div>
+            <button class="btn btn-secondary mt-3" id="prev2">Back</button>
+            <button class="btn btn-success mt-3">Submit</button>
+        </div>
     </div>
 
     <script src="app.js">
